kubernetes/stage/app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: diffaction-chats-users-gateway-service-deployment
  labels:
    app: diffaction-chats-users-gateway-service
    name: diffaction-chats-users-gateway-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: diffaction-chats-users-gateway-service
  template:
    metadata:
      labels:
        app: diffaction-chats-users-gateway-service
    spec:
      containers:
        - name: diffaction-chats-users-gateway-service
          image: artemowkin/diffaction-chats-users-gateway-service:latest
          ports:
            - containerPort: 8000
              name: web
            - containerPort: 9090
              name: grc
