kubernetes/stage/app/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: diffaction-chats-users-gateway-service-ingress
  labels:
    app: diffaction-chats-users-gateway-service
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-poduction"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - stage.diffaction.com
      secretName: diffaction-tls
  rules:
    - host: stage.diffaction.com
      http:
        paths:
          - path: /api/v1/chats-users
            pathType: Prefix
            backend:
              service:
                name: diffaction-chats-users-gateway-service
                port:
                  number: 8000
